# Spotui

./: Cargo.toml  README.md  project_description.md
src/: app.rs  logging.rs  main.rs
src/app/: app.rs  mod.rs  search_results.rs  search_tab.rs
src/spotify/: auth.rs  client.rs  mod.rs  spotify_event.rs
src/ui/: home.rs  mod.rs  playlists.rs  search.rs
